Add features to CSV #72